--- a/index.html
+++ b/index.html
@@ -84,8 +84,14 @@
         function calc(data) {
 
             const SUM = {
-                'SELL': {},
-                'BUY': {},
+                'POSITION_SELL': {
+                    'SELL': {},
+                    'BUY': {},
+                },
+                'POSITION_BUY': {
+                    'SELL': {},
+                    'BUY': {},
+                },
             }
             const objResult = {};
 
